adds image slider on travel-directory

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-body {
+/* body {
     margin: 1%;
-    padding: 5px;
-}
+    padding: 1%;
+} */
 
 .container {
     display: flex;
@@ -10,12 +10,12 @@ body {
 
 .nav-bar {
     width: 9vw;
-    height: 1050px;
+    height: 1073px;
     background-color: lightseagreen;
 }
 
 .my-image {
-    width: 100vw;
+    width: 96vw;
     justify-content: space-evenly;
 }
 
@@ -23,13 +23,14 @@ body {
     width: 140px;
     margin: 14px;
     border-radius: 3px;
-    border: 1px magenta solid;
+    border: 2px seashell solid;
 }
 
 #navigation {
-    margin: 5px;
-    height: 30px;
-    width: 120px;
+    margin: 14px;
+    height: 56px;
+    width: 106px;
+    border: 2px black solid;
     border-radius: 5px;
     background-color: lawngreen;
     text-align: center;
@@ -38,7 +39,7 @@ body {
 .btn {
     width: 80px;
     height: 40px;
-    border: 2px black;
+    border: 2px black solid;
     padding: 3px;
     text-align: center;
     text-decoration: none;
@@ -53,7 +54,6 @@ body {
 
 .img00 {
     max-width: 100%;
-    height: auto;
 }
 
 .home {
@@ -94,7 +94,6 @@ body {
     background-color: olive;
 }
 
-
 .github {
     background-color: teal;
 }
@@ -123,20 +122,19 @@ body {
 header {
     display: flex;
     background-color: lightslategrey;
-    height: 10vh;
+    height: 11.2vh;
 }
 
 #name {
     width: 30vw;
     margin: 10px 0 10px 20px;
     justify-content: center;
-    font-family: 'Times New Roman', Times, serif;
 }
 
 #drive {
     width: 70vw;
     margin: 60px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 
@@ -157,13 +155,13 @@ h2 {
 }
 
 #intro {
-    height: 84vh;
+    height: 87.25vh;
     display: flex;
     background-color: black;
 }
 
 #img00 {
-    height: 84vh;
+    height: 86.9vh;
     margin: 1px 0px;
     max-width: 60vw;
     margin: 1px;
@@ -179,9 +177,21 @@ h2 {
     max-width: 40vw;
 }
 
+.dots {
+    height: 75px;
+    width: 75px;
+    background-color: purple;
+    border-radius: 50%;
+    display: inline-block; 
+}
+
 .border-between{
     height: 50px;
     background-color: lightgreen;
+}
+  
+.img-list {
+    display: ;
 }
 
 @media all and (max-width: 499px) {
@@ -191,9 +201,3 @@ h2 {
       /*align-items: baseline;*/
     }
   }
-  
-
-.img-list {
-    display: ;
-}
-
